<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ui.activities.MainActivity">

    <TextView
        android:id="@+id/text_inicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_inicial"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="220dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_salario_liquido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/button_salario_liquido"
        app:layout_constraintTop_toBottomOf="@+id/text_inicial"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_decimo_terceiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_decimo_terceiro"
        app:layout_constraintTop_toBottomOf="@+id/button_salario_liquido"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>