<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/text_valor_salario_bruto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_insira_salario_bruto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_text_field_salario_bruto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_valor_salario_bruto"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_salario_bruto"
            android:hint="00,00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_descontos_salario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_descontos_salario"
        app:layout_constraintTop_toBottomOf="@+id/form_text_field_salario_bruto"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_text_field_descontos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_descontos_salario"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_descontos_extras"
            android:hint="00,00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/button_calcular_salario_liquido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/button_calcular_salario_liquido"
        app:layout_constraintTop_toBottomOf="@+id/form_text_field_descontos"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/text_resultado_salario_liquido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salario liquido:"
        app:layout_constraintTop_toBottomOf="@+id/button_calcular_salario_liquido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>